# pycomptheory

./: .gitignore  README.md  pyproject.toml
src/pycomptheory/: __init__.py
src/pycomptheory/automata/: __init__.py  dfa.py  enfa.py  fta.py  nfa.py  tree.py
src/pycomptheory/regex/: __init__.py  ast.py  rte.py
tests/: conftest.py  test_dfa.py  test_enfa.py  test_fta_rte.py  test_nfa.py  test_regex_ast.py
