[project]
name = "horn-agent"
version = "0.1.0"
description = "Computational theory: DFA, NFA, ε-NFA, regular expression ASTs, and Finite Tree Automata (FTA) with regular tree expressions"
requires-python = ">=3.12"
authors = [
    { name = "Nicola Gentile", email = "nicola.gentile.developer@gmail.com" },
]
dependencies = [
    "frozendict>=2.4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pycomptheory"]

[dependency-groups]
dev = [
    "pyright>=1.1.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
reportUnknownVariableType = false
